         from bug #3295295) (Sergio Baldoví)
20110509 machines/machines_periph.c,peripherals/ay.c,periph.h: reading from
         port 0xbffd on +2A/+3 was lost in peripheral refactoring (thanks,
         fusetest).
20110511 compat/unix/tuntap.c: add missing #include <string.h>.
20110514 tape.c: add case for set signal level block (Fred).
20110514 tape.c: we want to allow 0 tstate blocks to twiddle the mic to
         accomodate the set signal level block (Fred).
20110531 peripherals/dck.c: ensure pages loaded from .dck files get saved back
         into snapshots.
20110606 ui/win32/{debugger.c,pokefinder.c,pokefinder.rc}: fix Win32 build
         (Sergio Baldoví)
20110610 peripherals/if1.c: mirror Interface 1 ROM to seconds 8Kb of ROM as in
         the real interface (fixes bug #3314682) (thanks, mcleod_ideafix and
         zx81) (Fred).
20110724 fuse.c: fix a memory leak while making guesses as to what to do with
         non-option arguments (patch #3376243) (thanks, valgrind) (Sergio
         Baldoví).
20110726 ui/gtk/gtkui.c: allow the drag and drop of files from KDE
         (Dolphin/Konqueror) (patch #3376811) (thanks, Diondeville) (Sergio
         Baldoví).
20110726 machines/Makefile.am,ui/widget/Makefile.am: fix these issues;
         machines/machines_periph.h is not packed in the tarball,
         ui/widget/options_internals.h is not removed with distclean, and
         ui/widget/options.h no longer exists (patch #3388283) (Sergio Baldoví).
20110811 compat.h,compat/unix/file.c,fuse.c,machine.c,menu.h,menu_data.dat,
         pokefinder/{Makefile.am,pokemem.[ch]},ui/fb/fbui.c,
         ui/gtk/{Makefile.am,pokemem.c},ui/sdl/sdlui.c,ui/svga/svgaui.c,
         ui/ui.h,ui/win32/win32ui.c,utils.c: add support for POK files
         (patch #3382538) (Sergio Baldoví).
20110811 peripherals/disk/disk.c: fix one more instance of transposed memset
         arguments (patch #3388285) (Sergio Baldoví).